    * [DATASOLR-81] - GeoLocation cannot be used as property of type
    * [DATASOLR-69] - Registering custom converters via XML 
    * [DATASOLR-81] - Cannot index Geospatial with solr 4.x using GeoLocation 
    * [DATASOLR-94] - Joda-Time registered without existence check
    * [DATASOLR-98] - MappingSolrConverter does not retain element order when reading property
	
** Improvement
    * [DATASOLR-43] - Support parameter for time allowed
    * [DATASOLR-48] - Support for numeric document ids
    * [DATASOLR-49] - Support parameter for default type
    * [DATASOLR-52] - Support for 'IsNull' and 'IsNotNull' keywords
    * [DATASOLR-53] - Support for _version_ in PartialUpdates
    * [DATASOLR-55] - Allow usage of collections for 'startsWith', 'endsWith', 'contains'
    * [DATASOLR-58] - Support for 'boost' in derived queries via @Boost annotation
    * [DATASOLR-59] - Support for LBHttpSolrServer
    * [DATASOLR-61] - Build depends on Restlet which cannot be found in declared repositories
    * [DATASOLR-68] - Support for facet.prefix
    * [DATASOLR-90] - Add custom converter for reading/wirting joda time
    * [DATASOLR-100] - Support sloppy search criteria

** New Feature
    * [DATASOLR-42] - Support for {!join
    * [DATASOLR-45] - Placeholder support for 'filters' in @Query
    * [DATASOLR-46] - Placeholder support for 'queries' in @Facet
    * [DATASOLR-60] - Support for highlighting via @Highlight annotation
    * [DATASOLR-65] - Support for non-default request handlers
    * [DATASOLR-93] - Support for soft commit
	
** Task
    * [DATASOLR-54] - Extract QueryParser Interface
    * [DATASOLR-56] - Register jodatime converters only if jodatime is in classpath
    * [DATASOLR-76] - Upgrade to commons-lang3
    * [DATASOLR-79] - SolrOperations of SolrRepositoryFactoryBean cannot be accessed 
    * [DATASOLR-87] - Custom mapper for SolrDocument and SolrInputDocument
    * [DATASOLR-91] - Upgrade to solr 4.3.1 